# cryptography-class

./: Cargo.toml  README.md
aead_chacha_poly/: Cargo.toml  README.md  test.sh
aead_chacha_poly/src/: lib.rs  unwrap.rs  wrap.rs
aead_chacha_poly/tests/: wrap_unwrap.rs
chacha20/: Cargo.toml
chacha20/src/: lib.rs  main.rs
chacha20/tests/: cipher_decipher.rs
ed25519/: Cargo.toml  README.md
ed25519/src/: field.rs  lib.rs
ed25519/tests/: ed25519.rs  vectors.rs
io-utils/: Cargo.toml
io-utils/src/: lib.rs
kem/: Cargo.toml  README.md
kem/src/: lib.rs
poly1305/: Cargo.toml  README.md
poly1305/src/: check.rs  gen.rs  lib.rs
shake128/: Cargo.toml  README.md
shake128/src/: lib.rs  main.rs
shake128/tests/: permutations.rs  shake128.rs
x25519/: Cargo.toml  README.md
x25519/src/: curve.rs  field.rs  lib.rs  main.rs
x25519/tests/: curve1009.rs  curve101.rs  curve25519.rs  key_exchange.rs  rfc1.rs  rfc2.rs
