[workspace]
members = [
    "poly1305",
    "chacha20",
    "aead_chacha_poly",
    "io-utils",
    "kem",
    "shake128",
    "x25519",
    "ed25519",
]
resolver = "2"

[profile.release]
lto = true
strip = true

[profile.flamegraph]
inherits = "release"
debug = true
lto = true
strip = false

[workspace.dependencies]
argh = "0.1"
ark-ff = { version = "0.4", features = ["asm"] }
bytemuck = { version = "1", features = [
    "min_const_generics",
    "must_cast",
    "derive",
] }
rand = "0.8"
sha2 = "0.10"
crypto-bigint = "0.5"
