[package]
name = "ed25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { workspace = true }
x25519 = { path = "../x25519" }
argh = { workspace = true }
rand = { workspace = true }
sha2 = "0.10"
io-utils = { path = "../io-utils" }
