[package]
name = "ed25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-utils = { path = "../io-utils" }
x25519 = { path = "../x25519" }
ark-ff = { workspace = true }
argh = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
