[package]
name = "kem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20 = { path = "../chacha20" }
io-utils = { path = "../io-utils" }
shake128 = { path = "../shake128" }
x25519 = { path = "../x25519" }
argh = { workspace = true }
rand = { workspace = true }
