[package]
name = "poly1305"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "poly1305-gen"
path = "src/gen.rs"

[[bin]]
name = "poly1305-check"
path = "src/check.rs"

[dependencies]
argh = { workspace = true }
ark-ff = { workspace = true }
io-utils = { path = "../io-utils" }
