[package]
name = "x25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-utils = { path = "../io-utils" }
argh = { workspace = true }
ark-ff = { workspace = true }
bytemuck = { workspace = true }
crypto-bigint = { workspace = true }
